# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,8 @@ import authRouter from "./auth";
 import usersRouter from "./users";
 import streamersRouter from "./streamers";
 import kingdomsRouter from "./kingdoms";
+import sessionsRouter from "./sessions";
+import automationsRouter from "./automations";
 
 const router: IRouter = Router();
 
@@ -12,5 +14,7 @@ router.use(authRouter);
 router.use(usersRouter);
 router.use(streamersRouter);
 router.use(kingdomsRouter);
+router.use(sessionsRouter);
+router.use(automationsRouter);
 
 export default router;
